Applying svn commit 582716 to branch.