@@ -20,9 +20,6 @@ package org.apache.axis2.description;
 
 import org.apache.axiom.soap.SOAP11Constants;
 import org.apache.axiom.soap.SOAP12Constants;
-import org.apache.axiom.om.OMAbstractFactory;
-import org.apache.axiom.om.OMFactory;
-import org.apache.axiom.om.OMNamespace;
 import org.apache.axis2.AxisFault;
 import org.apache.axis2.namespace.Constants;
 import org.apache.axis2.transport.http.util.RESTUtil;
@@ -56,7 +53,6 @@ import org.apache.woden.wsdl20.InterfaceFaultReference;
 import org.apache.woden.wsdl20.InterfaceMessageReference;
 import org.apache.woden.wsdl20.InterfaceOperation;
 import org.apache.woden.wsdl20.Service;
-import org.apache.woden.wsdl20.WSDLComponent;
 import org.apache.woden.wsdl20.enumeration.MessageLabel;
 import org.apache.woden.wsdl20.extensions.http.HTTPBindingFaultExtensions;
 import org.apache.woden.wsdl20.extensions.http.HTTPBindingMessageReferenceExtensions;
@@ -102,10 +98,6 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
     protected Description description;
 
     private String wsdlURI;
-
-    // FIXME @author Chathura THis shoud be a URI. Find whats used by
-    // woden.
-    private static String RPC = "rpc";
 
     protected String interfaceName;
 
@@ -273,10 +265,11 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
             endpoint = endpoints[0];
         }
 
-        axisService.setEndpointName(endpoint.getName().toString());
-        axisService.setBindingName(endpoint.getBinding().getName().getLocalPart());
-        axisService.setEndpointURL(endpoint.getAddress().toString());
-
+        if (endpoint != null) {
+            axisService.setEndpointName(endpoint.getName().toString());
+            axisService.setBindingName(endpoint.getBinding().getName().getLocalPart());
+            axisService.setEndpointURL(endpoint.getAddress().toString());
+        }
     }
 
     private void processService() throws AxisFault {
@@ -300,7 +293,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
            wsdlService = services[0];
         }
 
-        axisService.setName(wsdlService.getName().getLocalPart().toString());
+        axisService.setName(wsdlService.getName().getLocalPart());
         Interface serviceInterface = wsdlService.getInterface();
         axisService.addParameter(new Parameter(WSDL2Constants.INTERFACE_LOCAL_NAME, serviceInterface.getName().getLocalPart()));
         processInterface(serviceInterface);
@@ -322,7 +315,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
             axisEndpoint.setBinding(processBinding(endpoint.getBinding(), serviceInterface));
         }
 
-        SOAPEndpointExtensions soapEndpointExtensions = null;
+        SOAPEndpointExtensions soapEndpointExtensions;
         try {
             soapEndpointExtensions = (SOAPEndpointExtensions) endpoint
                     .getComponentExtensionsForNamespace(new URI(WSDL2Constants.URI_WSDL2_SOAP));
@@ -354,7 +347,8 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
      * information here allows WSDL20ToAllAxisServicesBuilder to only do this
      * work 1 time per WSDL, instead of for each endpoint on each wsdlService.
      *
-     * @throws AxisFault
+     * @throws AxisFault - Thrown in case the necessary resources are not available in the WSDL
+     * @throws WSDLException - Thrown in case Woden throws an exception
      */
     protected void setup() throws AxisFault, WSDLException {
         if (setupComplete) { // already setup, just do nothing and return
@@ -363,8 +357,8 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
         try {
             if (description == null) {
 
-                Description description = null;
-                DescriptionElement descriptionElement = null;
+                Description description;
+                DescriptionElement descriptionElement;
                 if (wsdlURI != null && !"".equals(wsdlURI)) {
                     description = readInTheWSDLFile(wsdlURI);
                     descriptionElement = description.toElement();
@@ -444,7 +438,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
                 return (-1 * ((Comparable)o1).compareTo(o2));
             }
         });
-        SOAPBindingExtensionsImpl soapBindingExtensions = null;
+        SOAPBindingExtensionsImpl soapBindingExtensions;
         try {
             soapBindingExtensions = (SOAPBindingExtensionsImpl) binding
                     .getComponentExtensionsForNamespace(new URI(WSDL2Constants.URI_WSDL2_SOAP));
@@ -497,7 +491,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
             axisBindingFault.setParent(axisBinding);
 
             addDocumentation(axisBindingFault, interfaceFault.toElement());
-            SOAPBindingFaultExtensions soapBindingFaultExtensions = null;
+            SOAPBindingFaultExtensions soapBindingFaultExtensions;
 
             try {
                 soapBindingFaultExtensions = (SOAPBindingFaultExtensions) bindingFault
@@ -541,7 +535,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
             axisBindingOperation.setParent(axisBinding);
             axisBindingOperation.setName(axisOperation.getName());
             addDocumentation(axisBindingOperation, bindingOperation.toElement());
-            SOAPBindingOperationExtensions soapBindingOperationExtensions = null;
+            SOAPBindingOperationExtensions soapBindingOperationExtensions;
             try {
                 soapBindingOperationExtensions = ((SOAPBindingOperationExtensions)
                         bindingOperation.getComponentExtensionsForNamespace(
@@ -551,7 +545,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
             }
 
             URI soapAction = soapBindingOperationExtensions.getSoapAction();
-            if (soapAction != null && !"\"\"".equals(soapAction)) {
+            if (soapAction != null && !"\"\"".equals(soapAction.toString())) {
                 axisBindingOperation.setProperty(WSDL2Constants.ATTR_WSOAP_ACTION,
                                                  soapAction.toString());
             }
@@ -599,7 +593,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
                 axisBindingMessage.setDirection(axisMessage.getDirection());
 
 
-                SOAPBindingMessageReferenceExtensions soapBindingMessageReferenceExtensions = null;
+                SOAPBindingMessageReferenceExtensions soapBindingMessageReferenceExtensions;
                 try {
                     soapBindingMessageReferenceExtensions =
                             (SOAPBindingMessageReferenceExtensions) bindingMessageReference
@@ -637,7 +631,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
                 axisBindingMessageFault.setName(bindingFaultReference.getInterfaceFaultReference()
                         .getInterfaceFault().getName().getLocalPart());
 
-                SOAPBindingFaultReferenceExtensions soapBindingFaultReferenceExtensions = null;
+                SOAPBindingFaultReferenceExtensions soapBindingFaultReferenceExtensions;
                 try {
                     soapBindingFaultReferenceExtensions =
                             (SOAPBindingFaultReferenceExtensions) bindingFaultReference
@@ -673,7 +667,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
         });
         // Capture all the binding specific properties
 
-        HTTPBindingExtensionsImpl httpBindingExtensions = null;
+        HTTPBindingExtensionsImpl httpBindingExtensions;
         try {
             httpBindingExtensions = (HTTPBindingExtensionsImpl) binding
                     .getComponentExtensionsForNamespace(new URI(WSDL2Constants.URI_WSDL2_HTTP));
@@ -701,7 +695,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
             axisBindingFault.setParent(axisBinding);
 
             addDocumentation(axisBindingFault, interfaceFault.toElement());
-            HTTPBindingFaultExtensions httpBindingFaultExtensions = null;
+            HTTPBindingFaultExtensions httpBindingFaultExtensions;
 
             try {
                 httpBindingFaultExtensions = (HTTPBindingFaultExtensions) bindingFault
@@ -738,7 +732,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
             axisBindingOperation.setName(axisOperation.getName());
 
             addDocumentation(axisBindingOperation, bindingOperation.toElement());
-            HTTPBindingOperationExtensions httpBindingOperationExtensions = null;
+            HTTPBindingOperationExtensions httpBindingOperationExtensions;
             try {
                 httpBindingOperationExtensions = ((HTTPBindingOperationExtensions)
                         bindingOperation.getComponentExtensionsForNamespace(
@@ -796,7 +790,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
                 axisBindingMessage.setDirection(axisMessage.getDirection());
 
                 addDocumentation(axisBindingMessage, bindingMessageReference.toElement());
-                HTTPBindingMessageReferenceExtensions httpBindingMessageReferenceExtensions = null;
+                HTTPBindingMessageReferenceExtensions httpBindingMessageReferenceExtensions;
                 try {
                     httpBindingMessageReferenceExtensions =
                             (HTTPBindingMessageReferenceExtensions) bindingMessageReference
@@ -909,7 +903,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
         }
 
         if (interfaceOperationExtensions != null) {
-            Parameter parameter = new Parameter(WSDL2Constants.ATTR_WSDLX_SAFE, new Boolean(
+            Parameter parameter = new Parameter(WSDL2Constants.ATTR_WSDLX_SAFE, Boolean.valueOf(
                     interfaceOperationExtensions.isSafety()));
             axisOperation.addParameter(parameter);
         }
@@ -1024,8 +1018,7 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
         WSDLReader reader = WSDLFactory.newInstance().newWSDLReader();
         // This turns on WSDL validation which is set off by default.
 //        reader.setFeature(WSDLReader.FEATURE_VALIDATION, true);
-        Description description1 = reader.readWSDL(wsdlURI);
-        return description1;
+        return reader.readWSDL(wsdlURI);
     }
 
     /**
@@ -1113,7 +1106,6 @@ public class WSDL20ToAxisServiceBuilder extends WSDLToAxisServiceBuilder {
     private void addDocumentation(AxisDescription axisDescription, DocumentableElement element) {
         DocumentationElement[] documentationElements = element.getDocumentationElements();
         String documentation = "";
-        StringBuffer x;
         for (int i = 0; i < documentationElements.length; i++) {
             DocumentationElement documentationElement = documentationElements[i];
             Element content = (Element) documentationElement.getContent();
